--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-#but-reset, #but-color-change {
+#but-reset {
     background-color: #0075FF;
     border: none;
     border-radius: 30px;
     height: 50px;
     width: 50px;
+    position: absolute;
+    bottom: 25px;
+    right: 120px;
 }
 
 #but-add-note {
@@ -12,4 +15,18 @@
     border-radius: 45px;
     height: 85px;
     width: 85px;
+    position: absolute;
+    bottom: 25px;
+    right: 25px;
+}
+
+#but-color-change {
+    background-color: #0075FF;
+    border: none;
+    border-radius: 30px;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    bottom: 120px;
+    right: 25px;
 }
