--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+#body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 #but-reset {
     background-color: #0075FF;
     border: none;
@@ -29,4 +33,23 @@
     position: absolute;
     bottom: 120px;
     right: 25px;
+}
+
+#note {
+    background-color: #9C9C9C;
+    width: 25%;
+    height: fit-content;
+    min-height: 200px;
+    border-bottom-right-radius: 9px;
+    padding: 10px;
+    border-bottom-left-radius: 9px;
+}
+
+#blue-top {
+    background-color: #0075FF;
+    width: 25%;
+    padding: 10px;
+    height: 20px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 }
