--- a/style.css
+++ b/style.css
@@ -53,3 +53,9 @@
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
 }
+.svg-delete {
+    height: 30px;
+    width: 30px;
+    display: flexbox;
+    justify-content: flex-end;
+}
