--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-#body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+body {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 #but-reset {
@@ -11,6 +11,7 @@
     position: absolute;
     bottom: 25px;
     right: 120px;
+    cursor: pointer;
 }
 
 #but-add-note {
@@ -22,6 +23,7 @@
     position: absolute;
     bottom: 25px;
     right: 25px;
+    cursor: pointer;
 }
 
 #but-color-change {
@@ -33,6 +35,7 @@
     position: absolute;
     bottom: 120px;
     right: 25px;
+    cursor: pointer;
 }
 
 #note {
@@ -64,4 +67,5 @@
 #svg-delete-button {
     background-color: rgba(255, 255, 255, 0);
     border: none;
+    cursor: pointer;
 }
