okej, finally sa mi podarilo onclick creatnut divko, musim to len inak arrangnut lebo to creatuje stale pod buttonmi

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+#app {
+    display: flexbox;
+    justify-content: flex-start;
+}
+
 #but-reset {
     background-color: #0075FF;
     border: none;
