sfunkcnil som pridavanie notov, vedla seba a potom to hadze uz dole, treba spravit aj pridavanie x tlacitka na kazdy note

--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-#app {
-    display: flexbox;
-    justify-content: flex-start;
+#notes {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #but-reset {
@@ -43,7 +43,7 @@ body {
     cursor: pointer;
 }
 
-#note {
+.note-cl {
     background-color: #9C9C9C;
     width: 25%;
     height: fit-content;
@@ -53,13 +53,25 @@ body {
     border-bottom-left-radius: 9px;
 }
 
-#blue-top {
+.first-note-cl {
+    background-color: #9C9C9C;
+    width: 24%;
+    min-height: 200px;
+    margin: 10px;
+    border-bottom-right-radius: 9px;
+    border-bottom-left-radius: 9px;
+    border-top-right-radius: 9px;
+    border-top-left-radius: 9px;
+    display: flex;
+    flex-direction: column;
+}
+
+.blue-top-cl {
     background-color: #0075FF;
-    width: 25%;
     padding: 10px;
     height: 20px;
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
+    border-top-right-radius: 9px;
+    border-top-left-radius: 9px;
     display: flex;
     justify-content: flex-end;
 }
@@ -67,6 +79,7 @@ body {
     height: 30px;
     width: 30px;
     margin-top: -5px;
+    transform: rotate(45deg);
 }
 
 #svg-delete-button {
