--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
     transform: rotate(45deg);
 }
 
-#svg-delete-button {
+.svg-delete-button-cl {
     background-color: rgba(255, 255, 255, 0);
     border: none;
     cursor: pointer;
