zmenil som divka na text area aaby to bolo lepsie pre text

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 #notes {
     display: flex;
     flex-wrap: wrap;
+    height: fit-content;
 }
 
 #but-reset {
@@ -47,18 +48,30 @@ body {
 }
 
 .note-cl {
-    background-color: #9C9C9C;
-    width: 100%;
-    height: fit-content;
+    background-color: #7b7b7b;
+    padding: 10px;
+    color: rgb(227, 226, 226);
     min-height: 200px;
+    height: fit-content;
     border-bottom-right-radius: 9px;
     border-bottom-left-radius: 9px;
+    border: none;
+    outline: none;
+    font-size: 110%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.note-cl:focus {
+    border: none;
+    outline: 1px solid black;
+    outline-offset: -1px;
 }
 
 .first-note-cl {
     background-color: #9C9C9C;
     width: 24%;
     min-height: 200px;
+    height: fit-content;
     margin: 10px;
     border-bottom-right-radius: 9px;
     border-bottom-left-radius: 9px;
